# ClassroomViewer

./: .gitignore  CMakeLists.txt
src/: main.cpp  main_window.cpp  main_window.h  main_window.ui  map_widget.cpp  map_widget.h  models.h  policy.cpp  policy.h  profile.cpp  profile.h  receiver.cpp  receiver.h  room_models.cpp  room_models.h  server.cpp  server.h
